tests/fixtures/invalid/none_bitxor_list.py
# Cannot bitwise XOR None and List[int]
x: None = None ^ [1, 2, 3]
